--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,8 @@
 	<artifactId>sonitus</artifactId>
 	<version>0.1-SNAPSHOT</version>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 </project>
