--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
 	<artifactId>sonitus</artifactId>
 	<version>0.1-SNAPSHOT</version>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>14.0-rc1</version>
+		</dependency>
+	</dependencies>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
