--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
 			<artifactId>guava</artifactId>
 			<version>14.0-rc1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jcraft</groupId>
+			<artifactId>jorbis</artifactId>
+			<version>0.0.17</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
