--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>jorbis</artifactId>
 			<version>0.0.17</version>
 		</dependency>
+		<dependency>
+			<groupId>javazoom</groupId>
+			<artifactId>jlayer</artifactId>
+			<version>1.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
