--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 			<version>14.0-rc1</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jcraft</groupId>
 			<artifactId>jorbis</artifactId>
 			<version>0.0.17</version>
