--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>jlayer</artifactId>
 			<version>1.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.blinkenlights.jid3</groupId>
+			<artifactId>JID3</artifactId>
+			<version>0.46</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
